--- a/c.html
+++ b/c.html
@@ -2,16 +2,16 @@
 <html>
 		<head>
 	        <title>My profile</title>
-			<link href="i.css" rel="stylesheet"	type="text/css">
+			<link href="c.css" rel="stylesheet"	type="text/css">
 		</head>	
 		<body >
 		    
 		
 			<ul class="main">
-			<li><a href="test.html">home</a></li>
+			<li><a href="test.html" >home</a></li>
 			<li><a href="academics.html">Academics </a></li>
-			<li><a href="c.html">Contact</a></li><li>
-			<a href="#"  style="text-decoration:underline;" >Intrested</a></li>
+			<li><a href="c.html"  style="text-decoration:underline;" >Contact</a></li><li>
+			<a href="i.html">Intrested</a></li>
 			</ul>
 	
 		</body>
