--- a/c.html
+++ b/c.html
@@ -8,7 +8,7 @@
 		    
 		
 			<ul class="main">
-			<li><a href="test.html" >home</a></li>
+			<li><a href="index.html" >home</a></li>
 			<li><a href="academics.html">Academics </a></li>
 			<li><a href="c.html"  style="text-decoration:underline;" >Contact</a></li><li>
 			<a href="i.html">Intrested</a></li>
