--- a/i.html
+++ b/i.html
@@ -8,7 +8,7 @@
 		    
 		
 			<ul class="main">
-			<li><a href="test.html">home</a></li>
+			<li><a href="index.html">home</a></li>
 			<li><a href="academics.html">Academics </a></li>
 			<li><a href="c.html">Contact</a></li><li>
 			<a href="#"  style="text-decoration:underline;" >Intrested</a></li>
